compiler.output
Terminaux inutilisés dans la grammaire

   tFLOAT
   tCONST
   tRETURN


État 95 conflits: 1 décalage/réduction


Grammaire

    0 $accept: S $end

    1 S: %empty
    2  | declarationVar S
    3  | declarationFun S

    4 declaration: tTYPE tVAR

    5 afcInDec: %empty
    6         | tEQ expression_alg

    7 declarationVar: declaration afcInDec var

    8 var: %empty
    9    | tCOMMA newVar afcInDec var

   10 newVar: tVAR

   11 value: tINT
   12      | call

   13 declarationFun: declaration tLEFTBRACKET params tRIGHTBRACKET body
   14               | tTYPE tMAIN tLEFTBRACKET params tRIGHTBRACKET body
   15               | declaration tLEFTBRACKET params tRIGHTBRACKET tSEMI

   16 params: %empty
   17       | declaration suiteparamsdecla
   18       | tVAR suiteparams
   19       | value suiteparams

   20 suiteparamsdecla: %empty
   21                 | declaration tCOMMA suiteparamsdecla

   22 suiteparams: %empty
   23            | tCOMMA tVAR suiteparams
   24            | tCOMMA value suiteparams

   25 body: tLEFTBRACE expressions tRIGHTBRACE

   26 expressions: expression tSEMI expressions
   27            | expression_if expressions
   28            | %empty

   29 expression: tVAR tEQ expression_alg
   30           | declarationVar
   31           | call

   32 expression_condition: expression_alg
   33                     | tLEFTBRACKET expression_condition tRIGHTBRACKET
   34                     | expression_alg t2EQ expression_alg
   35                     | tNOT expression_condition
   36                     | expression_alg tGREATER tEQ expression_alg
   37                     | expression_alg tLESS tEQ expression_alg
   38                     | expression_alg tGREATER expression_alg
   39                     | expression_alg tLESS expression_alg
   40                     | expression_alg tNOTEQ expression_alg
   41                     | expression_condition tAND expression_condition
   42                     | expression_condition tOR expression_condition

   43 expression_alg: expression_alg tADD expression_alg
   44               | expression_alg tMIN expression_alg
   45               | expression_alg tDIV expression_alg
   46               | expression_alg tMUL expression_alg
   47               | tLEFTBRACKET expression_alg tRIGHTBRACKET
   48               | value
   49               | tVAR

   50 call: tVAR tLEFTBRACKET params tRIGHTBRACKET
   51     | tPRINTF tLEFTBRACKET params tRIGHTBRACKET

   52 expression_if: startIF body_if tELSE body_if
   53              | startIF body_if

   54 startIF: tIF tLEFTBRACKET expression_condition tRIGHTBRACKET

   55 body_if: tLEFTBRACE expressions tRIGHTBRACE
   56        | expression tSEMI
   57        | expression_if


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
error (256)
tMAIN (258) 14
tPRINTF (259) 51
tLEFTBRACE (260) 25 55
tRIGHTBRACE (261) 25 55
tINT (262) 11
tFLOAT (263)
tCONST (264)
tTYPE (265) 4 14
tADD (266) 43
tMIN (267) 44
tMUL (268) 46
tDIV (269) 45
tEQ (270) 6 29 36 37
tLEFTBRACKET (271) 13 14 15 33 47 50 51 54
tRIGHTBRACKET (272) 13 14 15 33 47 50 51 54
tSEMI (273) 15 26 56
tCOMMA (274) 9 21 23 24
tVAR (275) 4 10 18 23 29 49 50
tRETURN (276)
tLESS (277) 37 39
tGREATER (278) 36 38
tNOT (279) 35
tIF (280) 54
tELSE (281) 52
tAND (282) 41
tOR (283) 42
t2EQ (284) 34
tNOTEQ (285) 40
tIFX (286)


Non-terminaux, suivis des règles où ils apparaissent

$accept (32)
    à gauche: 0
S (33)
    à gauche: 1 2 3, à droite: 0 2 3
declaration (34)
    à gauche: 4, à droite: 7 13 15 17 21
afcInDec (35)
    à gauche: 5 6, à droite: 7 9
declarationVar (36)
    à gauche: 7, à droite: 2 30
var (37)
    à gauche: 8 9, à droite: 7 9
newVar (38)
    à gauche: 10, à droite: 9
value (39)
    à gauche: 11 12, à droite: 19 24 48
declarationFun (40)
    à gauche: 13 14 15, à droite: 3
params (41)
    à gauche: 16 17 18 19, à droite: 13 14 15 50 51
suiteparamsdecla (42)
    à gauche: 20 21, à droite: 17 21
suiteparams (43)
    à gauche: 22 23 24, à droite: 18 19 23 24
body (44)
    à gauche: 25, à droite: 13 14
expressions (45)
    à gauche: 26 27 28, à droite: 25 26 27 55
expression (46)
    à gauche: 29 30 31, à droite: 26 56
expression_condition (47)
    à gauche: 32 33 34 35 36 37 38 39 40 41 42, à droite: 33 35 41
    42 54
expression_alg (48)
    à gauche: 43 44 45 46 47 48 49, à droite: 6 29 32 34 36 37 38
    39 40 43 44 45 46 47
call (49)
    à gauche: 50 51, à droite: 12 31
expression_if (50)
    à gauche: 52 53, à droite: 27 57
startIF (51)
    à gauche: 54, à droite: 52 53
body_if (52)
    à gauche: 55 56 57, à droite: 52 53


État 0

    0 $accept: . S $end

    tTYPE  décalage et aller à l'état 1

    $défaut  réduction par utilisation de la règle 1 (S)

    S               aller à l'état 2
    declaration     aller à l'état 3
    declarationVar  aller à l'état 4
    declarationFun  aller à l'état 5


État 1

    4 declaration: tTYPE . tVAR
   14 declarationFun: tTYPE . tMAIN tLEFTBRACKET params tRIGHTBRACKET body

    tMAIN  décalage et aller à l'état 6
    tVAR   décalage et aller à l'état 7


État 2

    0 $accept: S . $end

    $end  décalage et aller à l'état 8


État 3

    7 declarationVar: declaration . afcInDec var
   13 declarationFun: declaration . tLEFTBRACKET params tRIGHTBRACKET body
   15               | declaration . tLEFTBRACKET params tRIGHTBRACKET tSEMI

    tEQ           décalage et aller à l'état 9
    tLEFTBRACKET  décalage et aller à l'état 10

    $défaut  réduction par utilisation de la règle 5 (afcInDec)

    afcInDec  aller à l'état 11


État 4

    2 S: declarationVar . S

    tTYPE  décalage et aller à l'état 1

    $défaut  réduction par utilisation de la règle 1 (S)

    S               aller à l'état 12
    declaration     aller à l'état 3
    declarationVar  aller à l'état 4
    declarationFun  aller à l'état 5


État 5

    3 S: declarationFun . S

    tTYPE  décalage et aller à l'état 1

    $défaut  réduction par utilisation de la règle 1 (S)

    S               aller à l'état 13
    declaration     aller à l'état 3
    declarationVar  aller à l'état 4
    declarationFun  aller à l'état 5


État 6

   14 declarationFun: tTYPE tMAIN . tLEFTBRACKET params tRIGHTBRACKET body

    tLEFTBRACKET  décalage et aller à l'état 14


État 7

    4 declaration: tTYPE tVAR .

    $défaut  réduction par utilisation de la règle 4 (declaration)


État 8

    0 $accept: S $end .

    $défaut  accepter


État 9

    6 afcInDec: tEQ . expression_alg

    tPRINTF       décalage et aller à l'état 15
    tINT          décalage et aller à l'état 16
    tLEFTBRACKET  décalage et aller à l'état 17
    tVAR          décalage et aller à l'état 18

    value           aller à l'état 19
    expression_alg  aller à l'état 20
    call            aller à l'état 21


État 10

   13 declarationFun: declaration tLEFTBRACKET . params tRIGHTBRACKET body
   15               | declaration tLEFTBRACKET . params tRIGHTBRACKET tSEMI

    tPRINTF  décalage et aller à l'état 15
    tINT     décalage et aller à l'état 16
    tTYPE    décalage et aller à l'état 22
    tVAR     décalage et aller à l'état 23

    $défaut  réduction par utilisation de la règle 16 (params)

    declaration  aller à l'état 24
    value        aller à l'état 25
    params       aller à l'état 26
    call         aller à l'état 21


État 11

    7 declarationVar: declaration afcInDec . var

    tCOMMA  décalage et aller à l'état 27

    $défaut  réduction par utilisation de la règle 8 (var)

    var  aller à l'état 28


État 12

    2 S: declarationVar S .

    $défaut  réduction par utilisation de la règle 2 (S)


État 13

    3 S: declarationFun S .

    $défaut  réduction par utilisation de la règle 3 (S)


État 14

   14 declarationFun: tTYPE tMAIN tLEFTBRACKET . params tRIGHTBRACKET body

    tPRINTF  décalage et aller à l'état 15
    tINT     décalage et aller à l'état 16
    tTYPE    décalage et aller à l'état 22
    tVAR     décalage et aller à l'état 23

    $défaut  réduction par utilisation de la règle 16 (params)

    declaration  aller à l'état 24
    value        aller à l'état 25
    params       aller à l'état 29
    call         aller à l'état 21


État 15

   51 call: tPRINTF . tLEFTBRACKET params tRIGHTBRACKET

    tLEFTBRACKET  décalage et aller à l'état 30


État 16

   11 value: tINT .

    $défaut  réduction par utilisation de la règle 11 (value)


État 17

   47 expression_alg: tLEFTBRACKET . expression_alg tRIGHTBRACKET

    tPRINTF       décalage et aller à l'état 15
    tINT          décalage et aller à l'état 16
    tLEFTBRACKET  décalage et aller à l'état 17
    tVAR          décalage et aller à l'état 18

    value           aller à l'état 19
    expression_alg  aller à l'état 31
    call            aller à l'état 21


État 18

   49 expression_alg: tVAR .
   50 call: tVAR . tLEFTBRACKET params tRIGHTBRACKET

    tLEFTBRACKET  décalage et aller à l'état 32

    $défaut  réduction par utilisation de la règle 49 (expression_alg)


État 19

   48 expression_alg: value .

    $défaut  réduction par utilisation de la règle 48 (expression_alg)


État 20

    6 afcInDec: tEQ expression_alg .
   43 expression_alg: expression_alg . tADD expression_alg
   44               | expression_alg . tMIN expression_alg
   45               | expression_alg . tDIV expression_alg
   46               | expression_alg . tMUL expression_alg

    tADD  décalage et aller à l'état 33
    tMIN  décalage et aller à l'état 34
    tMUL  décalage et aller à l'état 35
    tDIV  décalage et aller à l'état 36

    $défaut  réduction par utilisation de la règle 6 (afcInDec)


État 21

   12 value: call .

    $défaut  réduction par utilisation de la règle 12 (value)


État 22

    4 declaration: tTYPE . tVAR

    tVAR  décalage et aller à l'état 7


État 23

   18 params: tVAR . suiteparams
   50 call: tVAR . tLEFTBRACKET params tRIGHTBRACKET

    tLEFTBRACKET  décalage et aller à l'état 32
    tCOMMA        décalage et aller à l'état 37

    $défaut  réduction par utilisation de la règle 22 (suiteparams)

    suiteparams  aller à l'état 38


État 24

   17 params: declaration . suiteparamsdecla

    tTYPE  décalage et aller à l'état 22

    $défaut  réduction par utilisation de la règle 20 (suiteparamsdecla)

    declaration       aller à l'état 39
    suiteparamsdecla  aller à l'état 40


État 25

   19 params: value . suiteparams

    tCOMMA  décalage et aller à l'état 37

    $défaut  réduction par utilisation de la règle 22 (suiteparams)

    suiteparams  aller à l'état 41


État 26

   13 declarationFun: declaration tLEFTBRACKET params . tRIGHTBRACKET body
   15               | declaration tLEFTBRACKET params . tRIGHTBRACKET tSEMI

    tRIGHTBRACKET  décalage et aller à l'état 42


État 27

    9 var: tCOMMA . newVar afcInDec var

    tVAR  décalage et aller à l'état 43

    newVar  aller à l'état 44


État 28

    7 declarationVar: declaration afcInDec var .

    $défaut  réduction par utilisation de la règle 7 (declarationVar)


État 29

   14 declarationFun: tTYPE tMAIN tLEFTBRACKET params . tRIGHTBRACKET body

    tRIGHTBRACKET  décalage et aller à l'état 45


État 30

   51 call: tPRINTF tLEFTBRACKET . params tRIGHTBRACKET

    tPRINTF  décalage et aller à l'état 15
    tINT     décalage et aller à l'état 16
    tTYPE    décalage et aller à l'état 22
    tVAR     décalage et aller à l'état 23

    $défaut  réduction par utilisation de la règle 16 (params)

    declaration  aller à l'état 24
    value        aller à l'état 25
    params       aller à l'état 46
    call         aller à l'état 21


État 31

   43 expression_alg: expression_alg . tADD expression_alg
   44               | expression_alg . tMIN expression_alg
   45               | expression_alg . tDIV expression_alg
   46               | expression_alg . tMUL expression_alg
   47               | tLEFTBRACKET expression_alg . tRIGHTBRACKET

    tADD           décalage et aller à l'état 33
    tMIN           décalage et aller à l'état 34
    tMUL           décalage et aller à l'état 35
    tDIV           décalage et aller à l'état 36
    tRIGHTBRACKET  décalage et aller à l'état 47


État 32

   50 call: tVAR tLEFTBRACKET . params tRIGHTBRACKET

    tPRINTF  décalage et aller à l'état 15
    tINT     décalage et aller à l'état 16
    tTYPE    décalage et aller à l'état 22
    tVAR     décalage et aller à l'état 23

    $défaut  réduction par utilisation de la règle 16 (params)

    declaration  aller à l'état 24
    value        aller à l'état 25
    params       aller à l'état 48
    call         aller à l'état 21


État 33

   43 expression_alg: expression_alg tADD . expression_alg

    tPRINTF       décalage et aller à l'état 15
    tINT          décalage et aller à l'état 16
    tLEFTBRACKET  décalage et aller à l'état 17
    tVAR          décalage et aller à l'état 18

    value           aller à l'état 19
    expression_alg  aller à l'état 49
    call            aller à l'état 21


État 34

   44 expression_alg: expression_alg tMIN . expression_alg

    tPRINTF       décalage et aller à l'état 15
    tINT          décalage et aller à l'état 16
    tLEFTBRACKET  décalage et aller à l'état 17
    tVAR          décalage et aller à l'état 18

    value           aller à l'état 19
    expression_alg  aller à l'état 50
    call            aller à l'état 21


État 35

   46 expression_alg: expression_alg tMUL . expression_alg

    tPRINTF       décalage et aller à l'état 15
    tINT          décalage et aller à l'état 16
    tLEFTBRACKET  décalage et aller à l'état 17
    tVAR          décalage et aller à l'état 18

    value           aller à l'état 19
    expression_alg  aller à l'état 51
    call            aller à l'état 21


État 36

   45 expression_alg: expression_alg tDIV . expression_alg

    tPRINTF       décalage et aller à l'état 15
    tINT          décalage et aller à l'état 16
    tLEFTBRACKET  décalage et aller à l'état 17
    tVAR          décalage et aller à l'état 18

    value           aller à l'état 19
    expression_alg  aller à l'état 52
    call            aller à l'état 21


État 37

   23 suiteparams: tCOMMA . tVAR suiteparams
   24            | tCOMMA . value suiteparams

    tPRINTF  décalage et aller à l'état 15
    tINT     décalage et aller à l'état 16
    tVAR     décalage et aller à l'état 53

    value  aller à l'état 54
    call   aller à l'état 21


État 38

   18 params: tVAR suiteparams .

    $défaut  réduction par utilisation de la règle 18 (params)


État 39

   21 suiteparamsdecla: declaration . tCOMMA suiteparamsdecla

    tCOMMA  décalage et aller à l'état 55


État 40

   17 params: declaration suiteparamsdecla .

    $défaut  réduction par utilisation de la règle 17 (params)


État 41

   19 params: value suiteparams .

    $défaut  réduction par utilisation de la règle 19 (params)


État 42

   13 declarationFun: declaration tLEFTBRACKET params tRIGHTBRACKET . body
   15               | declaration tLEFTBRACKET params tRIGHTBRACKET . tSEMI

    tLEFTBRACE  décalage et aller à l'état 56
    tSEMI       décalage et aller à l'état 57

    body  aller à l'état 58


État 43

   10 newVar: tVAR .

    $défaut  réduction par utilisation de la règle 10 (newVar)


État 44

    9 var: tCOMMA newVar . afcInDec var

    tEQ  décalage et aller à l'état 9

    $défaut  réduction par utilisation de la règle 5 (afcInDec)

    afcInDec  aller à l'état 59


État 45

   14 declarationFun: tTYPE tMAIN tLEFTBRACKET params tRIGHTBRACKET . body

    tLEFTBRACE  décalage et aller à l'état 56

    body  aller à l'état 60


État 46

   51 call: tPRINTF tLEFTBRACKET params . tRIGHTBRACKET

    tRIGHTBRACKET  décalage et aller à l'état 61


État 47

   47 expression_alg: tLEFTBRACKET expression_alg tRIGHTBRACKET .

    $défaut  réduction par utilisation de la règle 47 (expression_alg)


État 48

   50 call: tVAR tLEFTBRACKET params . tRIGHTBRACKET

    tRIGHTBRACKET  décalage et aller à l'état 62


État 49

   43 expression_alg: expression_alg . tADD expression_alg
   43               | expression_alg tADD expression_alg .
   44               | expression_alg . tMIN expression_alg
   45               | expression_alg . tDIV expression_alg
   46               | expression_alg . tMUL expression_alg

    tMUL  décalage et aller à l'état 35
    tDIV  décalage et aller à l'état 36

    $défaut  réduction par utilisation de la règle 43 (expression_alg)


État 50

   43 expression_alg: expression_alg . tADD expression_alg
   44               | expression_alg . tMIN expression_alg
   44               | expression_alg tMIN expression_alg .
   45               | expression_alg . tDIV expression_alg
   46               | expression_alg . tMUL expression_alg

    tMUL  décalage et aller à l'état 35
    tDIV  décalage et aller à l'état 36

    $défaut  réduction par utilisation de la règle 44 (expression_alg)


État 51

   43 expression_alg: expression_alg . tADD expression_alg
   44               | expression_alg . tMIN expression_alg
   45               | expression_alg . tDIV expression_alg
   46               | expression_alg . tMUL expression_alg
   46               | expression_alg tMUL expression_alg .

    $défaut  réduction par utilisation de la règle 46 (expression_alg)


État 52

   43 expression_alg: expression_alg . tADD expression_alg
   44               | expression_alg . tMIN expression_alg
   45               | expression_alg . tDIV expression_alg
   45               | expression_alg tDIV expression_alg .
   46               | expression_alg . tMUL expression_alg

    $défaut  réduction par utilisation de la règle 45 (expression_alg)


État 53

   23 suiteparams: tCOMMA tVAR . suiteparams
   50 call: tVAR . tLEFTBRACKET params tRIGHTBRACKET

    tLEFTBRACKET  décalage et aller à l'état 32
    tCOMMA        décalage et aller à l'état 37

    $défaut  réduction par utilisation de la règle 22 (suiteparams)

    suiteparams  aller à l'état 63


État 54

   24 suiteparams: tCOMMA value . suiteparams

    tCOMMA  décalage et aller à l'état 37

    $défaut  réduction par utilisation de la règle 22 (suiteparams)

    suiteparams  aller à l'état 64


État 55

   21 suiteparamsdecla: declaration tCOMMA . suiteparamsdecla

    tTYPE  décalage et aller à l'état 22

    $défaut  réduction par utilisation de la règle 20 (suiteparamsdecla)

    declaration       aller à l'état 39
    suiteparamsdecla  aller à l'état 65


État 56

   25 body: tLEFTBRACE . expressions tRIGHTBRACE

    tPRINTF  décalage et aller à l'état 15
    tTYPE    décalage et aller à l'état 22
    tVAR     décalage et aller à l'état 66
    tIF      décalage et aller à l'état 67

    $défaut  réduction par utilisation de la règle 28 (expressions)

    declaration     aller à l'état 68
    declarationVar  aller à l'état 69
    expressions     aller à l'état 70
    expression      aller à l'état 71
    call            aller à l'état 72
    expression_if   aller à l'état 73
    startIF         aller à l'état 74


État 57

   15 declarationFun: declaration tLEFTBRACKET params tRIGHTBRACKET tSEMI .

    $défaut  réduction par utilisation de la règle 15 (declarationFun)


État 58

   13 declarationFun: declaration tLEFTBRACKET params tRIGHTBRACKET body .

    $défaut  réduction par utilisation de la règle 13 (declarationFun)


État 59

    9 var: tCOMMA newVar afcInDec . var

    tCOMMA  décalage et aller à l'état 27

    $défaut  réduction par utilisation de la règle 8 (var)

    var  aller à l'état 75


État 60

   14 declarationFun: tTYPE tMAIN tLEFTBRACKET params tRIGHTBRACKET body .

    $défaut  réduction par utilisation de la règle 14 (declarationFun)


État 61

   51 call: tPRINTF tLEFTBRACKET params tRIGHTBRACKET .

    $défaut  réduction par utilisation de la règle 51 (call)


État 62

   50 call: tVAR tLEFTBRACKET params tRIGHTBRACKET .

    $défaut  réduction par utilisation de la règle 50 (call)


État 63

   23 suiteparams: tCOMMA tVAR suiteparams .

    $défaut  réduction par utilisation de la règle 23 (suiteparams)


État 64

   24 suiteparams: tCOMMA value suiteparams .

    $défaut  réduction par utilisation de la règle 24 (suiteparams)


État 65

   21 suiteparamsdecla: declaration tCOMMA suiteparamsdecla .

    $défaut  réduction par utilisation de la règle 21 (suiteparamsdecla)


État 66

   29 expression: tVAR . tEQ expression_alg
   50 call: tVAR . tLEFTBRACKET params tRIGHTBRACKET

    tEQ           décalage et aller à l'état 76
    tLEFTBRACKET  décalage et aller à l'état 32


État 67

   54 startIF: tIF . tLEFTBRACKET expression_condition tRIGHTBRACKET

    tLEFTBRACKET  décalage et aller à l'état 77


État 68

    7 declarationVar: declaration . afcInDec var

    tEQ  décalage et aller à l'état 9

    $défaut  réduction par utilisation de la règle 5 (afcInDec)

    afcInDec  aller à l'état 11


État 69

   30 expression: declarationVar .

    $défaut  réduction par utilisation de la règle 30 (expression)


État 70

   25 body: tLEFTBRACE expressions . tRIGHTBRACE

    tRIGHTBRACE  décalage et aller à l'état 78


État 71

   26 expressions: expression . tSEMI expressions

    tSEMI  décalage et aller à l'état 79


État 72

   31 expression: call .

    $défaut  réduction par utilisation de la règle 31 (expression)


État 73

   27 expressions: expression_if . expressions

    tPRINTF  décalage et aller à l'état 15
    tTYPE    décalage et aller à l'état 22
    tVAR     décalage et aller à l'état 66
    tIF      décalage et aller à l'état 67

    $défaut  réduction par utilisation de la règle 28 (expressions)

    declaration     aller à l'état 68
    declarationVar  aller à l'état 69
    expressions     aller à l'état 80
    expression      aller à l'état 71
    call            aller à l'état 72
    expression_if   aller à l'état 73
    startIF         aller à l'état 74


État 74

   52 expression_if: startIF . body_if tELSE body_if
   53              | startIF . body_if

    tPRINTF     décalage et aller à l'état 15
    tLEFTBRACE  décalage et aller à l'état 81
    tTYPE       décalage et aller à l'état 22
    tVAR        décalage et aller à l'état 66
    tIF         décalage et aller à l'état 67

    declaration     aller à l'état 68
    declarationVar  aller à l'état 69
    expression      aller à l'état 82
    call            aller à l'état 72
    expression_if   aller à l'état 83
    startIF         aller à l'état 74
    body_if         aller à l'état 84


État 75

    9 var: tCOMMA newVar afcInDec var .

    $défaut  réduction par utilisation de la règle 9 (var)


État 76

   29 expression: tVAR tEQ . expression_alg

    tPRINTF       décalage et aller à l'état 15
    tINT          décalage et aller à l'état 16
    tLEFTBRACKET  décalage et aller à l'état 17
    tVAR          décalage et aller à l'état 18

    value           aller à l'état 19
    expression_alg  aller à l'état 85
    call            aller à l'état 21


État 77

   54 startIF: tIF tLEFTBRACKET . expression_condition tRIGHTBRACKET

    tPRINTF       décalage et aller à l'état 15
    tINT          décalage et aller à l'état 16
    tLEFTBRACKET  décalage et aller à l'état 86
    tVAR          décalage et aller à l'état 18
    tNOT          décalage et aller à l'état 87

    value                 aller à l'état 19
    expression_condition  aller à l'état 88
    expression_alg        aller à l'état 89
    call                  aller à l'état 21


État 78

   25 body: tLEFTBRACE expressions tRIGHTBRACE .

    $défaut  réduction par utilisation de la règle 25 (body)


État 79

   26 expressions: expression tSEMI . expressions

    tPRINTF  décalage et aller à l'état 15
    tTYPE    décalage et aller à l'état 22
    tVAR     décalage et aller à l'état 66
    tIF      décalage et aller à l'état 67

    $défaut  réduction par utilisation de la règle 28 (expressions)

    declaration     aller à l'état 68
    declarationVar  aller à l'état 69
    expressions     aller à l'état 90
    expression      aller à l'état 71
    call            aller à l'état 72
    expression_if   aller à l'état 73
    startIF         aller à l'état 74


État 80

   27 expressions: expression_if expressions .

    $défaut  réduction par utilisation de la règle 27 (expressions)


État 81

   55 body_if: tLEFTBRACE . expressions tRIGHTBRACE

    tPRINTF  décalage et aller à l'état 15
    tTYPE    décalage et aller à l'état 22
    tVAR     décalage et aller à l'état 66
    tIF      décalage et aller à l'état 67

    $défaut  réduction par utilisation de la règle 28 (expressions)

    declaration     aller à l'état 68
    declarationVar  aller à l'état 69
    expressions     aller à l'état 91
    expression      aller à l'état 71
    call            aller à l'état 72
    expression_if   aller à l'état 73
    startIF         aller à l'état 74


État 82

   56 body_if: expression . tSEMI

    tSEMI  décalage et aller à l'état 92


État 83

   57 body_if: expression_if .

    $défaut  réduction par utilisation de la règle 57 (body_if)


État 84

   52 expression_if: startIF body_if . tELSE body_if
   53              | startIF body_if .

    tELSE  décalage et aller à l'état 93

    $défaut  réduction par utilisation de la règle 53 (expression_if)


État 85

   29 expression: tVAR tEQ expression_alg .
   43 expression_alg: expression_alg . tADD expression_alg
   44               | expression_alg . tMIN expression_alg
   45               | expression_alg . tDIV expression_alg
   46               | expression_alg . tMUL expression_alg

    tADD  décalage et aller à l'état 33
    tMIN  décalage et aller à l'état 34
    tMUL  décalage et aller à l'état 35
    tDIV  décalage et aller à l'état 36

    $défaut  réduction par utilisation de la règle 29 (expression)


État 86

   33 expression_condition: tLEFTBRACKET . expression_condition tRIGHTBRACKET
   47 expression_alg: tLEFTBRACKET . expression_alg tRIGHTBRACKET

    tPRINTF       décalage et aller à l'état 15
    tINT          décalage et aller à l'état 16
    tLEFTBRACKET  décalage et aller à l'état 86
    tVAR          décalage et aller à l'état 18
    tNOT          décalage et aller à l'état 87

    value                 aller à l'état 19
    expression_condition  aller à l'état 94
    expression_alg        aller à l'état 95
    call                  aller à l'état 21


État 87

   35 expression_condition: tNOT . expression_condition

    tPRINTF       décalage et aller à l'état 15
    tINT          décalage et aller à l'état 16
    tLEFTBRACKET  décalage et aller à l'état 86
    tVAR          décalage et aller à l'état 18
    tNOT          décalage et aller à l'état 87

    value                 aller à l'état 19
    expression_condition  aller à l'état 96
    expression_alg        aller à l'état 89
    call                  aller à l'état 21


État 88

   41 expression_condition: expression_condition . tAND expression_condition
   42                     | expression_condition . tOR expression_condition
   54 startIF: tIF tLEFTBRACKET expression_condition . tRIGHTBRACKET

    tRIGHTBRACKET  décalage et aller à l'état 97
    tAND           décalage et aller à l'état 98
    tOR            décalage et aller à l'état 99


État 89

   32 expression_condition: expression_alg .
   34                     | expression_alg . t2EQ expression_alg
   36                     | expression_alg . tGREATER tEQ expression_alg
   37                     | expression_alg . tLESS tEQ expression_alg
   38                     | expression_alg . tGREATER expression_alg
   39                     | expression_alg . tLESS expression_alg
   40                     | expression_alg . tNOTEQ expression_alg
   43 expression_alg: expression_alg . tADD expression_alg
   44               | expression_alg . tMIN expression_alg
   45               | expression_alg . tDIV expression_alg
   46               | expression_alg . tMUL expression_alg

    tADD      décalage et aller à l'état 33
    tMIN      décalage et aller à l'état 34
    tMUL      décalage et aller à l'état 35
    tDIV      décalage et aller à l'état 36
    tLESS     décalage et aller à l'état 100
    tGREATER  décalage et aller à l'état 101
    t2EQ      décalage et aller à l'état 102
    tNOTEQ    décalage et aller à l'état 103

    $défaut  réduction par utilisation de la règle 32 (expression_condition)


État 90

   26 expressions: expression tSEMI expressions .

    $défaut  réduction par utilisation de la règle 26 (expressions)


État 91

   55 body_if: tLEFTBRACE expressions . tRIGHTBRACE

    tRIGHTBRACE  décalage et aller à l'état 104


État 92

   56 body_if: expression tSEMI .

    $défaut  réduction par utilisation de la règle 56 (body_if)


État 93

   52 expression_if: startIF body_if tELSE . body_if

    tPRINTF     décalage et aller à l'état 15
    tLEFTBRACE  décalage et aller à l'état 81
    tTYPE       décalage et aller à l'état 22
    tVAR        décalage et aller à l'état 66
    tIF         décalage et aller à l'état 67

    declaration     aller à l'état 68
    declarationVar  aller à l'état 69
    expression      aller à l'état 82
    call            aller à l'état 72
    expression_if   aller à l'état 83
    startIF         aller à l'état 74
    body_if         aller à l'état 105


État 94

   33 expression_condition: tLEFTBRACKET expression_condition . tRIGHTBRACKET
   41                     | expression_condition . tAND expression_condition
   42                     | expression_condition . tOR expression_condition

    tRIGHTBRACKET  décalage et aller à l'état 106
    tAND           décalage et aller à l'état 98
    tOR            décalage et aller à l'état 99


État 95

   32 expression_condition: expression_alg .
   34                     | expression_alg . t2EQ expression_alg
   36                     | expression_alg . tGREATER tEQ expression_alg
   37                     | expression_alg . tLESS tEQ expression_alg
   38                     | expression_alg . tGREATER expression_alg
   39                     | expression_alg . tLESS expression_alg
   40                     | expression_alg . tNOTEQ expression_alg
   43 expression_alg: expression_alg . tADD expression_alg
   44               | expression_alg . tMIN expression_alg
   45               | expression_alg . tDIV expression_alg
   46               | expression_alg . tMUL expression_alg
   47               | tLEFTBRACKET expression_alg . tRIGHTBRACKET

    tADD           décalage et aller à l'état 33
    tMIN           décalage et aller à l'état 34
    tMUL           décalage et aller à l'état 35
    tDIV           décalage et aller à l'état 36
    tRIGHTBRACKET  décalage et aller à l'état 47
    tLESS          décalage et aller à l'état 100
    tGREATER       décalage et aller à l'état 101
    t2EQ           décalage et aller à l'état 102
    tNOTEQ         décalage et aller à l'état 103

    tRIGHTBRACKET  [réduction par utilisation de la règle 32 (expression_condition)]
    $défaut       réduction par utilisation de la règle 32 (expression_condition)


État 96

   35 expression_condition: tNOT expression_condition .
   41                     | expression_condition . tAND expression_condition
   42                     | expression_condition . tOR expression_condition

    $défaut  réduction par utilisation de la règle 35 (expression_condition)


État 97

   54 startIF: tIF tLEFTBRACKET expression_condition tRIGHTBRACKET .

    $défaut  réduction par utilisation de la règle 54 (startIF)


État 98

   41 expression_condition: expression_condition tAND . expression_condition

    tPRINTF       décalage et aller à l'état 15
    tINT          décalage et aller à l'état 16
    tLEFTBRACKET  décalage et aller à l'état 86
    tVAR          décalage et aller à l'état 18
    tNOT          décalage et aller à l'état 87

    value                 aller à l'état 19
    expression_condition  aller à l'état 107
    expression_alg        aller à l'état 89
    call                  aller à l'état 21


État 99

   42 expression_condition: expression_condition tOR . expression_condition

    tPRINTF       décalage et aller à l'état 15
    tINT          décalage et aller à l'état 16
    tLEFTBRACKET  décalage et aller à l'état 86
    tVAR          décalage et aller à l'état 18
    tNOT          décalage et aller à l'état 87

    value                 aller à l'état 19
    expression_condition  aller à l'état 108
    expression_alg        aller à l'état 89
    call                  aller à l'état 21


État 100

   37 expression_condition: expression_alg tLESS . tEQ expression_alg
   39                     | expression_alg tLESS . expression_alg

    tPRINTF       décalage et aller à l'état 15
    tINT          décalage et aller à l'état 16
    tEQ           décalage et aller à l'état 109
    tLEFTBRACKET  décalage et aller à l'état 17
    tVAR          décalage et aller à l'état 18

    value           aller à l'état 19
    expression_alg  aller à l'état 110
    call            aller à l'état 21


État 101

   36 expression_condition: expression_alg tGREATER . tEQ expression_alg
   38                     | expression_alg tGREATER . expression_alg

    tPRINTF       décalage et aller à l'état 15
    tINT          décalage et aller à l'état 16
    tEQ           décalage et aller à l'état 111
    tLEFTBRACKET  décalage et aller à l'état 17
    tVAR          décalage et aller à l'état 18

    value           aller à l'état 19
    expression_alg  aller à l'état 112
    call            aller à l'état 21


État 102

   34 expression_condition: expression_alg t2EQ . expression_alg

    tPRINTF       décalage et aller à l'état 15
    tINT          décalage et aller à l'état 16
    tLEFTBRACKET  décalage et aller à l'état 17
    tVAR          décalage et aller à l'état 18

    value           aller à l'état 19
    expression_alg  aller à l'état 113
    call            aller à l'état 21


État 103

   40 expression_condition: expression_alg tNOTEQ . expression_alg

    tPRINTF       décalage et aller à l'état 15
    tINT          décalage et aller à l'état 16
    tLEFTBRACKET  décalage et aller à l'état 17
    tVAR          décalage et aller à l'état 18

    value           aller à l'état 19
    expression_alg  aller à l'état 114
    call            aller à l'état 21


État 104

   55 body_if: tLEFTBRACE expressions tRIGHTBRACE .

    $défaut  réduction par utilisation de la règle 55 (body_if)


État 105

   52 expression_if: startIF body_if tELSE body_if .

    $défaut  réduction par utilisation de la règle 52 (expression_if)


État 106

   33 expression_condition: tLEFTBRACKET expression_condition tRIGHTBRACKET .

    $défaut  réduction par utilisation de la règle 33 (expression_condition)


État 107
